--- a/maxmorris/src/App.css
+++ b/maxmorris/src/App.css
@@ -1,42 +1,42 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+html {
+  width: 100%; 
+  height: 100%; 
+}
+body {
+  width: 100%; 
+  height: 100%; 
+  background-image: url('homeBackground_cropped.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#app {
+  width: 100%; 
+  height: 100%; 
+}
+.card-overlay {
+  width: 100%; 
+  height: 100%; 
+  background-color: rgba(0, 0, 0, 0.7);
+
+}
+
+.subheader {
+  margin: auto;
+  display: flex;
+  width: 657px;
+  height: 167px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+h2 {
+  color: #FFF;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  font-family: Lato;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 159.023%; /* 63.609px */
+  letter-spacing: 4px;
 }
