--- a/src/Banner.css
+++ b/src/Banner.css
@@ -12,6 +12,7 @@ html, body, h1  {
     border-radius: 0px 0px 30px 30px;
     background: rgba(0, 0, 0, 0.65);
     color: white;
+    flex-wrap: wrap;
 }
 
 h1 {
