Completed formatting for projects page. Need to replace certain images, finish adding all relevant projects, and add responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,9 @@ h2 {
   line-height: 159.023%; /* 63.609px */
   letter-spacing: 4px;
 }
+
+@media screen and (max-width: 600px) {
+  html, body {
+    overflow-x: hidden;
+  }
+}
