--- a/src/HomeButtons.css
+++ b/src/HomeButtons.css
@@ -35,6 +35,29 @@
     font-weight: 700;
 }
 
+#projectsSubButton {
+    width: 200px;
+    height: 66.667px;
+    flex-shrink: 0;
+    border-radius: 7px;
+    border: 2px solid #FFF;
+    background: rgba(0, 94, 21, 0.40);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #FFF;
+    text-align: center;
+    font-family: Proxima Nova;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 159.023%; /* 34.985px */
+    letter-spacing: 2.2px;
+}
+
+#projectsSubButton:hover {
+    transition: 100ms;
+    background: rgba(0, 255, 56, 0.35);
+}
+
 #aboutButton {
     width: 267px;
     height: 89px;
