--- a/src/HomeButtons.css
+++ b/src/HomeButtons.css
@@ -154,6 +154,39 @@
     font-weight: 700; 
 }
 
+.buttonContainer {
+    display: flex;
+    gap: 75px;
+}
+
+#contactSubButton {
+    width: 250px;
+    height: 67px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    border: 2px solid #FFF;
+    background: rgba(100, 0, 0, 0.30);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    color: white;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: Proxima Nova;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 159.023%; /* 34.985px */
+    letter-spacing: 2.2px;
+}
+
+#contactSubButton:hover {
+    transition: 100ms;
+    background: rgba(255, 0, 0, 0.35);
+    font-weight: 700; 
+}
+
 a {
     color: #FFF;
     text-decoration: none;
