--- a/src/Banner.css
+++ b/src/Banner.css
@@ -30,3 +30,10 @@ h1 {
     line-height: normal;
     letter-spacing: 5.25px;
 }
+
+.subBannerContainer {
+    position: fixed;
+    width: 100%;
+    background: rgb(0, 0, 0);
+    border-radius: 0px 0px 30px 30px;
+}
