--- a/src/About.css
+++ b/src/About.css
@@ -23,6 +23,7 @@
     font-weight: 300;
     line-height: 159%; /* 33.39px */
     letter-spacing: 1.47px;
+    text-align: left;
 }
 
 #headshot {
@@ -42,6 +43,28 @@
 }
 
 #missionText {
+    width: 50%;
+    font-family: 'Proxima Nova';
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 159%; /* 33.39px */
+    letter-spacing: 1.47px;
+    text-align: left;
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+#funFactHeader {
+    margin-top: 0;
+}
+
+.factText {
     width: 50%;
     font-family: 'Proxima Nova';
     font-size: 21px;
