--- a/src/Resume.css
+++ b/src/Resume.css
@@ -3,6 +3,7 @@
     background-image: url('pexels-pixabay-434337.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     
 }
 
