--- a/src/Banner.css
+++ b/src/Banner.css
@@ -14,9 +14,7 @@ html, body, h1  {
     color: white;
     flex-wrap: wrap;
 }
-#funFactHeader {
-    margin-top: 0;
-}
+
 
 h1 {
     display: flex;
@@ -40,3 +38,28 @@ h1 {
     background: rgb(0, 0, 0);
     border-radius: 0px 0px 30px 30px;
 }
+
+@media screen and (max-width: 491px) {
+    .container {
+        height: 120px;
+    }
+
+    .container h1 {
+        letter-spacing: 1px;
+        height: 120px;
+        font-size: 40px;
+    }
+  }
+
+/*Galaxy fold is 280px width*/
+@media screen and (max-width: 300px) {
+    .container {
+        height: 120px;
+    }
+
+    .container h1 {
+        height: 120px;
+        font-size: 35px;
+    }
+  }
+
