--- a/src/Home.css
+++ b/src/Home.css
@@ -10,3 +10,9 @@
     height: 100%; 
     background-color: rgba(0, 0, 0, 0.7);
   }
+
+  @media screen and (max-width: 600px) {
+    .homeButtons {
+        
+    }
+  }
