--- a/src/HomeButtons.css
+++ b/src/HomeButtons.css
@@ -1,7 +1,7 @@
 .homeButtons {
     display: flex;
     margin:auto;
-    width: 690px;
+    max-width: 690px;
     padding: 25px 1px;
     justify-content: center;
     align-items: center;
@@ -195,3 +195,42 @@ a {
 a:visited {
     text-decoration: none;
 }
+
+@media screen and (max-width: 491px) {
+    .homeButtons {
+        gap: 10%;
+        height: 50%;
+        padding: 0;
+    }
+    #projectsButton {
+        min-width: 220px;
+        width: 100%;
+        height: 80%;
+        font-size: 20px;
+        padding: 15px 15px;
+    }
+
+    #aboutButton {
+        min-width: 220px;
+        width: 100%;
+        height: 80%;
+        font-size: 20px;
+        padding: 15px 15px;   
+    }
+
+    .resumeButton {
+        min-width: 220px;
+        width: 100%;
+        height: 80%;
+        font-size: 20px;
+        padding: 15px 15px;   
+    }
+
+    #contactButton {
+        min-width: 220px;
+        width: 100%;
+        height: 80%;
+        font-size: 20px;
+        padding: 15px 15px;   
+    }
+  }
