--- a/src/Projects.css
+++ b/src/Projects.css
@@ -61,6 +61,7 @@ html, body {
     max-width: 750px;
     margin: 0;
     font-weight: 300;
+    letter-spacing: 3px;
 }
 
 .card-overlay {
@@ -77,7 +78,28 @@ html, body {
 }
 
 .project-container h1 {
-    height: 90px;
     font-weight: 400;
+}
+
+@media screen and (max-width: 491px) {
+    .project-container h1 {
+        max-width: 300px;
+        font-size: 35px;
+        text-align: center;
+        padding-left: 10px;
+        padding-right: 10px;
+        height: 100px;
+    }
+    .project-container p {
+        text-align: center;
+        font-size: 18px;
+        margin: 0 auto;
+    }
+    .projectContentAll {
+        padding-top: 120px;
+    }
+    .ProjectOne {
+
+    }
 }
 
