Completed mobile phone resposiveness for Home, About, Contact, and Resume unless a particular device has been missed. Just need to finish projects then move on to tablets for the last thing to address with responsiveness

--- a/src/Contact.css
+++ b/src/Contact.css
@@ -8,3 +8,21 @@
 .contactContentAll {
     padding-top: 210px;
 }
+
+@media screen and (max-width: 491px) {
+    .contactContentAll {
+        padding-top: 140px;
+    }
+    .buttonContainer {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+}
+
+/*iPhone 4 and smaller */
+@media screen and (max-height: 567px) {
+    #contactBackground {
+        height: auto;
+    }  
+}
