--- a/src/Resume.css
+++ b/src/Resume.css
@@ -1,14 +1,21 @@
 #resumeBackground {
-    height:100%;
+    height: 100%;
     background-image: url('pexels-pixabay-434337.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     
+    
 }
+
+#resumeOverlay {
+
+}
+
 
 .resumeContentAll {
     padding-top: 210px;
+
 }
 
 #resumeSubheader {
@@ -56,3 +63,50 @@ button {
     height: 100%; 
     background-color: rgba(0, 0, 0, 0.6);
   }
+
+  @media screen and (max-width: 491px) {
+    #resumeBackground {
+        background-attachment: fixed;
+    }
+    .resumeContentAll {
+        padding-top: 140px;
+    }
+    #resumeSubheader {
+        font-size: 30px;
+        margin : 0 20px;
+        margin-bottom: 20px;
+    }
+
+    .resumeContainer p {
+        width: 75%;
+        font-size: 18px;
+        margin-bottom: 40px;
+        text-align: left;
+        letter-spacing: 1.47px;
+    }
+  }
+
+/*NOTE: heights may need to be taken into account*/
+
+@media screen and (max-width: 400px) and (max-height: 740px) {
+    #resumeSubheader {
+        font-size: 20px;
+    }
+
+    .resumeContainer p {
+        font-size: 12px;
+        margin-bottom: 20px;
+    }
+    
+}
+
+/*iPhone 4 and smaller */
+@media screen and (max-height: 567px) {
+    .resumeContentAll {
+        padding-top: 100px;
+    }
+    #resumeBackground {
+        height: auto;
+    }  
+}
+
