--- a/src/About.css
+++ b/src/About.css
@@ -110,3 +110,50 @@ ul {
         width: 80%;
     }
 }
+
+@media screen and (max-width: 400px) and (max-height: 740px) {
+    .aboutSubheader {
+        font-size: 30px;
+    }
+
+    .aboutContainer #intro {
+        width: 75%;
+        font-size: 16px;
+        margin-bottom: 20px;
+    }
+
+    .myMission #missionText {
+        width: 75%;
+        font-size: 16px;
+        margin-bottom: 20px;
+    }
+
+    .funFacts ul .factText {
+        padding: 0;
+        font-size: 16px;
+        width: 80%;
+    }
+}
+
+@media screen and (max-height: 568px) {
+    .aboutSubheader {
+        font-size: 25px;
+    }
+    .aboutContainer #intro {
+        width: 75%;
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+
+    .myMission #missionText {
+        width: 75%;
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+
+    .funFacts ul .factText {
+        padding: 0;
+        font-size: 14px;
+        width: 80%;
+    }
+}
