--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 html {
   width: 100%; 
   height: 100%; 
+  background-color: rgb(118, 117, 117);
 }
 
 body {
@@ -53,9 +54,26 @@ h2 {
 }
 
 /*Galaxy fold is 280px width*/
-@media screen and (max-width: 319px) {
+@media screen and (max-width: 400px) and (max-height: 740px) {
+  .subheader {
+    padding: 0;
+    margin-bottom: 30px;
+  }
   .subheader h2 {
     margin: 0 20px;
-    font-size: 15px;
+    font-size: 18px;
   }
 }
+
+/*iPhone 4 and smaller */
+@media screen and (max-height: 568px) {
+  #HomeMenu {
+      height: auto;
+  }
+
+  #app {
+  }
+
+  .card-overlay {
+  }
+}  
