--- a/src/BackButton.css
+++ b/src/BackButton.css
@@ -5,4 +5,17 @@
     #backLabel {
         display: none;
     }
+    
+}
+
+@media screen and (max-width: 400px) and (max-height: 740px) {
+    svg {
+        width: 25px;
+    }
+}
+
+@media screen and (max-height: 568px) {
+    svg {
+        width: 20px;
+    }
 }
