--- a/src/Banner.css
+++ b/src/Banner.css
@@ -45,7 +45,7 @@ h1 {
     }
 
     .container h1 {
-        letter-spacing: 1px;
+        letter-spacing: 2px;
         height: 120px;
         font-size: 40px;
     }
@@ -59,7 +59,18 @@ h1 {
 
     .container h1 {
         height: 120px;
-        font-size: 35px;
+        font-size: 30px;
     }
+  }
+
+  @media screen and (max-height: 568px) {
+    .container {
+        height: 100px;
+    }
+    .container h1 {
+        height: 100px;
+        font-size: 30px;
+    }
+
   }
 
