--- a/src/Home.css
+++ b/src/Home.css
@@ -3,16 +3,12 @@
     background-image: url('homeBackground_cropped.png');
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    /*overflow-y:hidden ;*/
 }
 
 #resumeOverlay {
     width: 100%; 
     height: 100%; 
     background-color: rgba(0, 0, 0, 0.7);
-  }
-
-  @media screen and (max-width: 600px) {
-    .homeButtons {
-        
-    }
-  }
+  } 
