--- a/src/HomeButtons.css
+++ b/src/HomeButtons.css
@@ -163,7 +163,7 @@
     width: 250px;
     height: 67px;
     flex-shrink: 0;
-    border-radius: 5px;
+    border-radius: 10px;
     border: 2px solid #FFF;
     background: rgba(100, 0, 0, 0.40);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -210,6 +210,12 @@ a:visited {
         padding: 15px 15px;
     }
 
+    #projectsSubButton {
+        width: 100%;
+        font-size: 20px;
+        padding: 15px 15px;
+    }
+
     #aboutButton {
         min-width: 220px;
         width: 100%;
@@ -233,4 +239,83 @@ a:visited {
         font-size: 20px;
         padding: 15px 15px;   
     }
-  }
+
+    #resumeSubButton {
+        min-width: 220px;
+        width: 100%;
+        height: 80%;
+        font-size: 16px;
+        padding: 15px 30px;
+
+    }
+
+    #contactSubButton {
+        min-width: 220px;
+        width: 100%;
+        height: 80%;
+        font-size: 20px;
+        padding: 15px 15px;
+    }
+}
+
+/*SE, Galaxy Fold etc.*/
+@media screen and (max-width: 400px) and (max-height: 700px) {
+    .homeButtons {
+        gap: 20px;
+        height: 45%;
+        padding: 0; 
+        margin: 0 20px;
+        margin-bottom: 30px;
+    }
+    #projectsButton {
+        min-width: 170px;
+        width: 100%;
+        height: 80%;
+        font-size: 16px;
+        padding: 15px 15px;
+    }
+
+    #projectsSubButton {
+        width: 100%;
+        font-size: 20px;
+        padding: 15px 15px;
+    }
+
+    #aboutButton {
+        min-width: 170px;
+        width: 100%;
+        height: 80%;
+        font-size: 16px;
+        padding: 15px 15px;   
+    }
+
+    .resumeButton {
+        min-width: 170px;
+        width: 100%;
+        height: 80%;
+        font-size: 16px;
+        padding: 15px 15px;   
+    }
+
+    #contactButton {
+        min-width: 170px;
+        width: 100%;
+        height: 80%;
+        font-size: 16px;
+        padding: 15px 15px;   
+    }
+
+    #resumeSubButton {
+        height: 80%;
+        font-size: 13px;
+        padding: 15px 30px;
+    }
+    
+    #contactSubButton {
+        min-width: 170px;
+        width: 100%;
+        height: 80%;
+        font-size: 13px;
+        padding: 15px 15px;
+    }
+}
