--- a/src/About.css
+++ b/src/About.css
@@ -135,7 +135,7 @@ ul {
     }
 }
 
-@media screen and (max-height: 568px) {
+@media screen and (max-width: 400px) and (max-height: 568px) {
     .aboutSubheader {
         font-size: 25px;
     }
@@ -155,5 +155,9 @@ ul {
         padding: 0;
         font-size: 14px;
         width: 80%;
+    }
+
+    .aboutContentAll {
+        padding-top: 120px;
     }
 }
