--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
 #app {
   width: 100%; 
   height: 100%; 
+  overflow-x: hidden;
 }
 
 
@@ -37,7 +38,7 @@ h2 {
   letter-spacing: 4px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 491px) {
   html, body {
     overflow-x: hidden;
   }
@@ -77,3 +78,24 @@ h2 {
   .card-overlay {
   }
 }  
+
+@media screen and (min-width: 491px) and (max-height: 725px) {
+  #HomeMenu {
+      height: auto;
+  }
+}
+
+@media screen and (min-width: 491px) and (max-width: 725px) {
+  #HomeMenu {
+      height: auto;
+  }
+}
+
+/*Tablets*/
+@media screen and (min-width: 491px) and (max-width: 1082px) {
+  .subheader h2 {
+    font-size: 30px;
+  }
+}
+
+
