--- a/src/BackButton.css
+++ b/src/BackButton.css
@@ -14,7 +14,7 @@
     }
 }
 
-@media screen and (max-height: 568px) {
+@media screen and (max-width: 400px) and (max-height: 567px) {
     svg {
         width: 20px;
     }
