--- a/src/Banner.css
+++ b/src/Banner.css
@@ -63,13 +63,22 @@ h1 {
     }
   }
 
-  @media screen and (max-height: 568px) {
+  @media screen and (max-width: 400px) and (max-height: 567px) {
     .container {
         height: 100px;
     }
     .container h1 {
         height: 100px;
         font-size: 30px;
+    }
+
+  }
+
+  @media screen and (min-width: 491px) and (max-width: 1082px) {
+
+    .container h1 {
+        height: 120px;
+        font-size: 60px;
     }
 
   }
