--- a/src/Contact.css
+++ b/src/Contact.css
@@ -24,5 +24,12 @@
 @media screen and (max-height: 567px) {
     #contactBackground {
         height: auto;
-    }  
+    }
 }
+
+@media screen and (min-width: 491px) and (max-height: 725px) {
+    #HomeMenu {
+        height: auto;
+    }
+  }
+  
