--- a/src/HomeButtons.css
+++ b/src/HomeButtons.css
@@ -319,3 +319,17 @@ a:visited {
         padding: 15px 15px;
     }
 }
+
+@media screen and (min-width: 491px) and (max-height: 725px) {
+    body {
+        height: auto;
+    }
+}
+
+/*Tablets*/
+@media screen and (min-width: 491px) and (max-width: 1082px) {
+   
+
+}
+
+  
