--- a/src/SubBanner.css
+++ b/src/SubBanner.css
@@ -10,7 +10,7 @@
     }
 }
 
-@media screen and (max-height: 568px) {
+@media screen and (max-width: 400px) and (max-height: 567px) {
     #backPosition {
         top: 25%;
 
