--- a/src/Resume.css
+++ b/src/Resume.css
@@ -110,8 +110,18 @@ button {
     }  
 }
 
-@media screen and (min-width: 491px) and (max-height: 725px) {
+@media screen and (min-width: 491px) and (max-width: 1082px) and (max-height: 725px) {
     #resumeBackground {
         height: auto;
     }
+  }
+
+
+
+  /*Tablets*/
+@media screen and (min-width: 491px) and (max-width: 1082px) {
+    #resumeSubheader {
+      font-size: 42px;
+    }
+    
   }
