--- a/src/Contact.css
+++ b/src/Contact.css
@@ -32,4 +32,18 @@
         height: auto;
     }
   }
+
+  @media screen and (min-width: 491px) and (max-width: 1082px) and (max-height: 725px) {
+    #contactBackground {
+        height: auto;
+    }
+  }
+
+  @media screen and (min-width: 491px) and (max-width: 1082px) {
+    .buttonContainer {
+        padding-top: 30px;
+        flex-direction: column;
+    }
+    
+  }
   
