--- a/src/Projects.css
+++ b/src/Projects.css
@@ -83,7 +83,7 @@ html, body {
 
 @media screen and (max-width: 491px) {
     .project-container h1 {
-        max-width: 300px;
+        max-width: 450px;
         font-size: 30px;
         text-align: center;
         padding-left: 10px;
@@ -105,7 +105,7 @@ html, body {
 
 @media screen and (max-width: 400px) and (max-height: 740px) {
     .project-container h1 {
-        max-width: 300px;
+        max-width: 450px;
         font-size: 25px;
         text-align: center;
         padding-left: 10px;
@@ -143,3 +143,12 @@ html, body {
     }
 }
 
+@media screen and (min-width: 491px) and (max-width: 1082px) {
+    .project-container h1 {
+        font-size: 45px;
+        text-align: center;
+        padding-left: 10px;
+        padding-right: 10px;
+        height: 100px;
+    }  
+}
