--- a/src/Home.css
+++ b/src/Home.css
@@ -1,6 +1,6 @@
 #HomeMenu {
     height:100%;
-    background-image: url('homeBackground_cropped.png');
+    background-image: url('../dist/assets/homeBackground_cropped-62c2af82.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
