--- a/src/About.css
+++ b/src/About.css
@@ -1,8 +1,17 @@
-#aboutBackground {
-    background-image: url('aboutBackground.png');
+#aboutBackground::before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url(aboutBackground-5db3067a.png) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
 }
 
 .aboutContentAll {
