--- a/src/Banner.css
+++ b/src/Banner.css
@@ -83,3 +83,9 @@ h1 {
 
   }
 
+/*Horizontal Phones*/
+@media screen and (min-width: 491px) and (max-height: 470px) {
+    .container {
+        height: auto;
+    }
+}
