--- a/src/Resume.css
+++ b/src/Resume.css
@@ -1,11 +1,21 @@
+#resumeBackground::before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url(pexels-pixabay-434337-06132623.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 #resumeBackground {
     height: 100%;
-    background-image: url('pexels-pixabay-434337.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    
-    
 }
 
 #resumeOverlay {
@@ -88,7 +98,7 @@ button {
 
 /*NOTE: heights may need to be taken into account*/
 
-@media screen and (max-width: 400px) and (max-height: 740px) {
+@media screen and (max-width: 400px) and (max-height: 900px) {
     #resumeSubheader {
         font-size: 20px;
     }
