Various css adjustments

--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,8 +1,17 @@
 #contactBackground {
-    height:100%;
-    background-image: url('contact_background.png');
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url(contact_background.png) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-repeat: no-repeat;
 }
 
 .contactContentAll {
