--- a/src/Home.css
+++ b/src/Home.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     z-index: -10;
-    background: url(homeBackground_cropped-62c2af82.png) no-repeat center center;
+    background: url(homeBackground_cropped.png) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
