--- a/src/About.css
+++ b/src/About.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     z-index: -10;
-    background: url(aboutBackground-5db3067a.png) no-repeat center center;
+    background: url(aboutBackground.png) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -26,7 +26,7 @@
     margin: auto;
     width: 35%;
     color: #FFF;
-    font-family: Proxima Nova;
+    font-family: "proxima-nova", sans-serif;
     font-size: 21px;
     font-style: normal;
     font-weight: 300;
@@ -53,7 +53,7 @@
 
 #missionText {
     width: 50%;
-    font-family: 'Proxima Nova';
+    font-family: "proxima-nova", sans-serif;
     font-size: 21px;
     font-style: normal;
     font-weight: 300;
@@ -75,7 +75,7 @@ ul {
 
 .factText {
     width: 50%;
-    font-family: 'Proxima Nova';
+    font-family: "proxima-nova", sans-serif;
     font-size: 21px;
     font-style: normal;
     font-weight: 300;
