--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ body {
 h2 {
   color: #FFF;
   text-align: center;
-  font-family: Lato;
+  font-family: 'Lato';
   font-size: 40px;
   font-style: normal;
   font-weight: 400;
