--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,4 +1,4 @@
-#contactBackground {
+#contactBackground::before {
     content: "";
     display: block;
     position: fixed;
@@ -7,11 +7,15 @@
     width: 100%;
     height: 100%;
     z-index: -10;
-    background: url(contact_background.png) no-repeat center center;
+    background: url(aboutBackground-5db3067a.png) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+#contactBackground {
+    height: 100%;
 }
 
 .contactContentAll {
