--- a/src/About.css
+++ b/src/About.css
@@ -26,7 +26,7 @@
     margin: auto;
     width: 35%;
     color: #FFF;
-    font-family: "proxima-nova", sans-serif;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 21px;
     font-style: normal;
     font-weight: 300;
@@ -53,7 +53,7 @@
 
 #missionText {
     width: 50%;
-    font-family: "proxima-nova", sans-serif;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 21px;
     font-style: normal;
     font-weight: 300;
@@ -75,7 +75,7 @@ ul {
 
 .factText {
     width: 50%;
-    font-family: "proxima-nova", sans-serif;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 21px;
     font-style: normal;
     font-weight: 300;
