--- a/src/Resume.css
+++ b/src/Resume.css
@@ -43,7 +43,7 @@ p {
     align-self: center;
     color: #FFF;
     text-align: center;
-    font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 25px;
     font-style: normal;
     font-weight: 300;
@@ -84,6 +84,7 @@ button {
   .card-overlay {
     width: 100%;
     height: 100%;
+    background-color: rgba(0,0,0,0.6);
   }
 
   @media screen and (max-width: 491px) {
