Responsiveness changes and button font change

--- a/src/Banner.css
+++ b/src/Banner.css
@@ -88,4 +88,11 @@ h1 {
     .container {
         height: auto;
     }
+
+    .container h1 {
+        font-size: 50px;
+    }
+    .subBannerContainer {
+        border-radius: 0;
+    }
 }
