--- a/src/About.css
+++ b/src/About.css
@@ -205,3 +205,10 @@ ul {
     }
 
 }
+
+@media screen and (min-width: 491px) and (max-height: 470px) {
+    .aboutContentAll {
+        padding-top: 150px;
+    }
+
+}
