--- a/src/BackButton.css
+++ b/src/BackButton.css
@@ -1,3 +1,4 @@
+
 @media screen and (max-width: 900px) {
     svg {
         
@@ -21,6 +22,6 @@
 }
 
 .container {
-        height: auto
+        height: auto;
     }
 
