--- a/src/Contact.css
+++ b/src/Contact.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     z-index: -10;
-    background: url(aboutBackground-5db3067a.png) no-repeat center center;
+    background: url(contact_background.png) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -58,5 +58,14 @@
         flex-direction: column;
     }
     
+  }
+
+  @media screen and (min-width: 491px) and (max-height: 470px) {
+    .contactContentAll {
+        padding-top: 150px;
+    }
+    #resumeSubheader {
+        font-size: 40px;
+    }
   }
   
