--- a/src/HomeButtons.css
+++ b/src/HomeButtons.css
@@ -20,7 +20,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: #FFF;
     text-align: center;
-    font-family: Proxima Nova;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
@@ -45,7 +45,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: #FFF;
     text-align: center;
-    font-family: Proxima Nova;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -68,7 +68,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: #FFF;
     text-align: center;
-    font-family: Proxima Nova;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
@@ -92,7 +92,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: #FFF;
     text-align: center;
-    font-family: Proxima Nova;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
@@ -116,7 +116,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: #FFF;
     text-align: center;
-    font-family: Proxima Nova;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -140,7 +140,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: #FFF;
     text-align: center;
-    font-family: Proxima Nova;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
@@ -173,7 +173,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-family: Proxima Nova;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 500;
