--- a/src/Projects.css
+++ b/src/Projects.css
@@ -153,3 +153,9 @@ html, body {
         height: 100px;
     }  
 }
+
+@media screen and (min-width: 491px) and (max-height: 470px) {
+    .projectContentAll {
+        padding-top: 120px;
+    }
+  }
