--- a/src/Resume.css
+++ b/src/Resume.css
@@ -146,5 +146,10 @@ button {
     #resumeSubheader {
       font-size: 42px;
     }
-    
+  }
+
+  @media screen and (min-width: 491px) and (max-height: 470px) {
+    .resumeContentAll {
+        padding-top: 150px;
+    }
   }
