--- a/src/Banner.css
+++ b/src/Banner.css
@@ -5,31 +5,46 @@ html, body, h1  {
 }
 
 .container {
-    display: flex;
-    height: 182px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0px 0px 30px 30px;
-    background: rgba(0, 0, 0, 0.65);
+    
+    border-bottom: solid #CD0000 5px;
+    background: rgb(0, 0, 0);
     color: white;
-    flex-wrap: wrap;
+    position: fixed;
+    width: 100%;
+
 }
 
+.navButtons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 50px;
+    flex-wrap: wrap;
+    padding-right: 5%;
+    font-size: 18px;
+    letter-spacing: 0.1em;
+
+}
+
+.container h3 {
+    font-family: 'Andada Pro', serif;
+    font-weight: 400;
+    
+
+}
 
 h1 {
-    display: flex;
-    width: 587px;
-    height: 167px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    /*font-size: 75px;*/
-    font-size: 468.75%; /*converted from 75px*/
-    font-family: 'Lato';
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    letter-spacing: 5.25px;
+
+}
+
+.logo {
+    position: absolute;
+    margin: 0;
+}
+
+.logo img {
+    padding-top: 2%;
+    padding-left: 5%;
+    width: 75%;
 }
 
 .subBannerContainer {
@@ -38,6 +53,47 @@ h1 {
     background: rgb(0, 0, 0);
     border-radius: 0px 0px 30px 30px;
 }
+
+@media screen and (max-width: 650px) {
+
+    .container {
+        overflow: auto;
+        overflow-y: hidden;
+
+
+
+    }
+
+    .container::after {
+        content: '';
+        position: fixed; /* Position fixed relative to viewport */
+        top: 0;
+        right: 0;
+        width: 150px;
+        height: 50px;
+        background: linear-gradient(to left, #000000, rgba(0, 0, 0, 0)); /* Dark gradient */
+        pointer-events: none; /* Make the pseudo-element non-interactable */
+
+
+    }
+
+    .logo {
+        opacity: 0;
+        z-index: -1;
+    }
+
+    .navButtons {
+        margin-left: -5%;
+        overflow-x: auto;
+        overflow-y: hidden;
+        flex-wrap: nowrap;
+        justify-content: center;
+        font-size: 16px;
+        width: 600px;
+        z-index: 100;
+    }
+}
+
 
 @media screen and (max-width: 491px) {
     .container {
@@ -87,10 +143,10 @@ h1 {
 @media screen and (min-width: 491px) and (max-height: 470px) {
     .container {
         height: auto;
+        
     }
 
-    .container h1 {
-        font-size: 50px;
+    .container h3 {
     }
     .subBannerContainer {
         border-radius: 0;
