--- a/src/Contact.css
+++ b/src/Contact.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     z-index: -10;
-    background: url(contact_background.png) no-repeat center center;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(redbackgroundcopy.jpeg) center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -19,7 +19,7 @@
 }
 
 .contactContentAll {
-    padding-top: 210px;
+    padding-top: 150px;
 }
 
 @media screen and (max-width: 491px) {
@@ -30,6 +30,7 @@
         display: flex;
         flex-direction: column;
         gap: 40px;
+        /*padding-left: 10%;*/
     }
 }
 
