--- a/src/About.css
+++ b/src/About.css
@@ -24,8 +24,10 @@
 }
 
 #intro {
+    display: flex;
     margin: auto;
-    width: 33%;
+    flex-direction: column;
+    width: 100%;
     color: #FFF;
     font-family: "optima", sans-serif;
     font-size: 18px;
@@ -34,6 +36,10 @@
     line-height: 159%; /* 33.39px */
     letter-spacing: 0.07em;
     text-align: left;
+}
+
+#intro p {
+    width: 50%;
 }
 
 #headshot {
@@ -55,7 +61,9 @@
 }
 
 #missionText {
-    width: 43%;
+    display: flex;
+    flex-direction: column;
+    width: 75%;
     font-family: "optima", sans-serif;
     font-size: 18px;
     font-style: normal;
@@ -63,6 +71,10 @@
     line-height: 159%; /* 33.39px */
     letter-spacing: 0.07em;
     text-align: left;
+}
+
+#missionText p {
+    width: 50%;
 }
 
 ul {
@@ -109,7 +121,13 @@ ul {
             font-size: 18px;
             margin-bottom: 20px;
     }
+    #missionText p {
+        width: 100%;
+    }
 
+    #intro p {
+        width: 100%;
+    }
     .aboutContainer #intro {
         width: 75%;
         font-size: 18px;
@@ -135,6 +153,8 @@ ul {
         font-size: 16px;
         margin-bottom: 20px;
     }
+
+    
 
     .myMission #missionText {
         width: 75%;
@@ -174,6 +194,7 @@ ul {
     .aboutContentAll {
         padding-top: 120px;
     }
+    
 }
 
 @media screen and (min-width: 491px) and (max-width: 1082px) {
@@ -186,11 +207,14 @@ ul {
     }
 
     #intro {
-        width: 55%;
+        width: 100%;
         margin-bottom: 20px;
 
     }
     
+    #missionText p {
+        width: 100%;
+    }
     #headshot {
         margin: 30px auto;
     }
