--- a/src/HomeButtons.css
+++ b/src/HomeButtons.css
@@ -37,25 +37,29 @@
 
 #projectsSubButton {
     width: 200px;
-    height: 66.667px;
+    height: 60px;
     flex-shrink: 0;
-    border-radius: 7px;
     border: 2px solid #FFF;
-    background: rgba(0, 94, 21, 0.40);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    color: #FFF;
+    background: rgba(102, 104, 0, 0);
+    display: flex;
+    color: white;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 22px;
+    font-family: "optima", sans-serif;
+    font-size: 18px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 159.023%; /* 34.985px */
     letter-spacing: 2.2px;
 }
 
 #projectsSubButton:hover {
-    transition: 100ms;
-    background: rgba(0, 255, 56, 0.35);
+    font-weight: 500;
+    transition: 300ms;
+    background: rgba(255, 255, 255, 1);
+    color: black;
 }
 
 #aboutButton {
